--- a/luci-proto-amneziawg/Makefile
+++ b/luci-proto-amneziawg/Makefile
@@ -6,15 +6,13 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_MAINTAINER:=Amnezia Admin <admin@amnezia.org>
-PKG_VERSION:=1.0.0-$(AUTORELEASE)
 LUCI_TITLE:=Support for AmneziaWG Web UI
-LUCI_DESCRIPTION:=Provides Web UI for AmneziaWG
 LUCI_DEPENDS:=+amneziawg-tools +ucode
 LUCI_PKGARCH:=all
 
-PKG_PROVIDES:=luci-proto-amneziawg
+PKG_MAINTAINER:=Amnezia Admin <admin@amnezia.org>
+PKG_VERSION:=1.0.0-$(AUTORELEASE)
 
-include $(TOPDIR)/feeds/luci/luci.mk
+include ../../luci.mk
 
 # call BuildPackage - OpenWrt buildroot signature
